--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pool Schedules</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="src/styles.css">
 </head>
 
 <body>
     <h1>Ottawa City Pool Schedules</h1>
-    <script src="pool-reader.js"></script>
+    <script src="src/pool-reader.js"></script>
 </body>
 
 </html>
