--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 <body>
     <h1>Ottawa City Pool Schedules</h1>
     <script src="src/pool-reader.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZBGRMJH6TT"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-ZBGRMJH6TT');
+    </script>
 </body>
 
 </html>
